# Tik-tak-toe

./: CMakeLists.txt  README.md  main.cpp
source/: Abstract.cpp  Abstract.h
widgets/: mainWindow.cpp  mainWindow.h  winnerWindow.cpp  winnerWindow.h
